fix: z-index popup

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,6 +2,7 @@
 
 .sidebar {
   position: relative;
+  z-index: 4;
 
   width: 100%;
   max-width: 420px;
