--- a/src/components/TopPanel/TopPanel.scss
+++ b/src/components/TopPanel/TopPanel.scss
@@ -33,6 +33,7 @@
 
 .top-panel {
   position: relative;
+  z-index: 5;
   
   display: flex;
   align-items: center;
